--- a/src/css/viagens.css
+++ b/src/css/viagens.css
@@ -35,7 +35,15 @@ main {
     height: auto; /* Remove a altura fixa */
     justify-content: center; /* Centraliza verticalmente */
     align-items: center; /* Centraliza horizontalmente */
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
 }
+
+
+.card:hover {
+    transform: rotateY(180deg);
+}
+
 
 .btn-delete {
     border: none;
@@ -57,6 +65,7 @@ main {
     object-fit: cover;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
+    backface-visibility: hidden;
 }
 
 .card-content {
@@ -75,6 +84,45 @@ main {
 
 .card-subtext {
     font-style: italic;
+}
+
+
+/* ANIMAÇÃO */
+.card-title, .card-text, .card-subtext {
+    backface-visibility: hidden;
+}
+
+.card-description {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotateY(180deg); /* Centraliza e rotaciona */
+    padding: 1rem;
+    top: 0;
+    left: 0;
+    width: 90%;
+    height: 92%;
+    padding: 1rem;
+    background-color: #4D6573;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.6s;
+}
+
+.card:hover .card-img,
+.card:hover .card-title,
+.card:hover .card-text,
+.card:hover .card-subtext {
+    opacity: 0;
+}
+
+.card:hover .card-description {
+    opacity: 1;
 }
 
 
